<resources>
    <string name="app_name">Prueba</string>
    <string name="app_logo_desc">Logo de la aplicación</string>
    <string name="login_subtitle">Inicia sesión para continuar</string>
    <string name="hint_login">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="btn_login">Inicio de sesión</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="home_welcome">¡Bienvenido!</string>
    <string name="home_subtitle">Explora nuestras categorías</string>
    <string name="cat_figuras">Figuras</string>
    <string name="cat_mangas">Mangas</string>
    <string name="cat_poster">Poster</string>
    <string name="cat_merch">Merch</string>
</resources>